docs/assets/css/main2.scss
---
# In dark mode, used to replace: https://github.com/mmistakes/minimal-mistakes/blob/master/assets/css/main.scss
---

@charset "utf-8";

@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin_dark | default: 'dark' }}"; // skin
@import "minimal-mistakes"; // main partials

@import "key-map.scss"; // keymapping styles

// neon support
::selection {
	background: #f21368;
}
::-moz-selection {
	background: #f21368;
}

[data-aw2-key] .aw2-show-key{
	background-color: rgba(255, 255, 255, 0.2);
}
.aw2-skill-loadout-slot .aw2-show-key{
  background-color: rgb(67, 64, 64);
}
#aw2-keyboard-layout {
  background-color: "#000";
}

